fix meme time ago low contrast

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,7 +14,7 @@
     --popover-foreground: 0 0% 9%; /* text-neutral-900 */
 
     --card: 0 0% 100%; /* text-white */
-    --card-foreground: 0 0% 45%; /* text-neutral-500 */
+    --card-foreground: 0 0% 32%; /* text-neutral-600 */
 
     --border: 0 0% 83%; /* text-neutral-300 */
     --input: 0 0% 83%; /* text-neutral-300 */
